--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -19,7 +19,7 @@
 <body>
 	<div id="postResultDiv" align="center"></div>
 	<div class="signup-form">
-		<form action="/examples/actions/confirmation.php" method="post">
+		<form id="" method="post">
 			<h2>Create Account</h2>
 			<div class="form-group">
 				<div class="input-group">
@@ -46,12 +46,12 @@
 				<div class="input-group">
 					<span class="input-group-addon"> <i class="fa fa-lock"></i>
 						<i class="fa fa-check"></i>
-					</span> <input type="text" class="form-control" id="confirm_password"
-						placeholder="Confirm Password" required="required">
+					</span> <input type="text" class="form-control" id="number"
+						placeholder="Number" required="required">
 				</div>
 			</div>
 			<div class="form-group">
-				<button type="submit" class="btn btn-primary btn-block btn-lg">Sign
+				<button type="submit" onclick="post.postUser()" class="btn btn-primary btn-block btn-lg">Sign
 					Up</button>
 			</div>
 			<p class="small text-center">
@@ -64,8 +64,12 @@
 			Already have an account? <a href="login.html">Login here</a>.
 		</div>
 	</div>
-	<script src="js/post.js"></script>
-	<script src="js/jquery-3.3.1.min.js"></script>
+	<script src="/webjars/jquery/jquery.min.js"></script>
 	<script src="styles/bootstrap-4.1.2/bootstrap.min.js"></script>
+	<script src="js/jquery-3.3.1.min.js"></script>
+	<script src="js/post.js"></script>
+	
+	
+	
 </body>
 </html>
