--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -267,7 +267,7 @@
 											<div class="schedule_time">20 Horas</div>
 											<div class="schedule_title">Iphone X</div>
 											<div class="schedule_info">
-												Venderdor: <a>Diana Ramirez</a>
+												Vendedor: <a>Diana Ramirez</a>
 											</div>
 										</div>
 									</li>
@@ -280,7 +280,7 @@
 											<div class="schedule_time">48 Horas</div>
 											<div class="schedule_title">Samsung Galaxy s10</div>
 											<div class="schedule_info">
-												Venderdor: <a>Santiago Ruiz</a>
+												Vendedor: <a>Santiago Ruiz</a>
 											</div>
 										</div>
 									</li>
@@ -296,9 +296,11 @@
 													<div class="schedule_title">Maquina de escribir
 														antigua</div>
 													<div class="schedule_info">
-														Venderdor: <a>Laura Serra</a>
+														Vendedor: <a>Laura Serra</a>
 													</div>
 												</div>
+											</div>
+										</div>
 									</li>
 									<li
 										class="d-flex flex-row align-items-center justify-content-start">
@@ -309,7 +311,7 @@
 											<div class="schedule_time">12 Horas</div>
 											<div class="schedule_title">Armadura Antigua</div>
 											<div class="schedule_info">
-												Venderdor: <a>Rodrigo Gallego</a>
+												Vendedor: <a>Rodrigo Gallego</a>
 											</div>
 										</div>
 									</li>
@@ -336,7 +338,7 @@
 											<div class="schedule_time">30 Minutos</div>
 											<div class="schedule_title">Guitarra GIbson</div>
 											<div class="schedule_info">
-												Venderdor: <a>Lucía Dominguez</a>
+												Vendedor: <a>Lucía Dominguez</a>
 											</div>
 										</div>
 									</li>
@@ -349,7 +351,7 @@
 											<div class="schedule_time">30 Minutos</div>
 											<div class="schedule_title">Ferrari 488</div>
 											<div class="schedule_info">
-												Venderdor: <a>Manuel Campos</a>
+												Vendedor: <a>Manuel Campos</a>
 											</div>
 										</div>
 									</li>
