--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://fonts.googleapis.com/css?family=Roboto:400,700"
 	rel="stylesheet">
-<title>Bootstrap Elegant Sign Up Form with Icons</title>
+<title>SuperEasy Sign Up</title>
 <link rel="stylesheet" type="text/css"
 	href="styles/bootstrap-4.1.2/bootstrap.min.css">
 <link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css">
@@ -25,43 +25,54 @@
 				<div class="input-group">
 					<span class="input-group-addon"><i class="fa fa-user"></i></span> <input
 						type="text" class="form-control" id="username"
-						placeholder="Username" required="required">
+						placeholder="Usuario" required="required">
 				</div>
 			</div>
 			<div class="form-group">
 				<div class="input-group">
 					<span class="input-group-addon"><i class="fa fa-paper-plane"></i></span>
 					<input type="email" class="form-control" id="email"
-						placeholder="Email Address" required="required">
+						placeholder="Correo" required="required">
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="input-group">
+					<span class="input-group-addon"><i class="fa fa-phone"></i></span>
+					<input type="text" class="form-control" id="phone"
+						placeholder="Telefono" required="required">
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="input-group">
+					<span class="input-group-addon"><i class="fa fa-map-marker"></i></span>
+					<input type="text" class="form-control" id="address"
+						placeholder="Direccion" required="required">
 				</div>
 			</div>
 			<div class="form-group">
 				<div class="input-group">
 					<span class="input-group-addon"><i class="fa fa-lock"></i></span> <input
-						type="text" class="form-control" id="password"
-						placeholder="Password" required="required">
+						type="password" class="form-control" id="password"
+						placeholder="Contraseña" required="required">
 				</div>
 			</div>
 			<div class="form-group">
 				<div class="input-group">
 					<span class="input-group-addon"> <i class="fa fa-lock"></i>
 						<i class="fa fa-check"></i>
-					</span> <input type="text" class="form-control" id="number"
-						placeholder="Number" required="required">
+
+					</span> <input type="password" class="form-control" id="confirm_password"
+						placeholder="Confirmar Contraseña" required="required">
 				</div>
 			</div>
 			<div class="form-group">
-				<button type="submit" onclick="post.postUser()" class="btn btn-primary btn-block btn-lg">Sign
-					Up</button>
+				<button type="submit" class="btn btn-primary btn-block btn-lg">Registrarse</button>
+
 			</div>
-			<p class="small text-center">
-				By clicking the Sign Up button, you agree to our <br> <a
-					href="#">Terms &amp; Conditions</a>, and <a href="#">Privacy
-					Policy</a>.
-			</p>
+			
 		</form>
 		<div class="text-center">
-			Already have an account? <a href="login.html">Login here</a>.
+			Ya tiene una cuenta? <a href="index.html">Ingrese aqui</a>.
 		</div>
 	</div>
 	<script src="/webjars/jquery/jquery.min.js"></script>
