--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -43,15 +43,8 @@
 			<div class="form-group">
 				<div class="input-group">
 					<span class="input-group-addon"><i class="fa fa-phone"></i></span>
-					<input type="text" class="form-control" id="phone"
+					<input type="number" class="form-control" id="phone"
 						placeholder="Telefono" required="required">
-				</div>
-			</div>
-			<div class="form-group">
-				<div class="input-group">
-					<span class="input-group-addon"><i class="fa fa-map-marker"></i></span>
-					<input type="text" class="form-control" id="address"
-						placeholder="Direccion" required="required">
 				</div>
 			</div>
 			<div class="form-group">
@@ -61,14 +54,7 @@
 						placeholder="Contraseña" required="required">
 				</div>
 			</div>
-			<div class="form-group">
-				<div class="input-group">
-					<span class="input-group-addon"> <i class="fa fa-lock"></i>
-						<i class="fa fa-check"></i>
-					</span> <input type="password" class="form-control" id="confirm_password"
-						placeholder="Confirmar Contraseña" required="required">
-				</div>
-			</div>
+
 			<div class="form-group">
 
 				<button type="submit" onclick="post.postUser()"
