--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -9,17 +9,22 @@
 <title>SuperEasy Sign Up</title>
 <link rel="stylesheet" type="text/css"
 	href="styles/bootstrap-4.1.2/bootstrap.min.css">
+
 <link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet"
 	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="styles/register.css">
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
 
 
 </head>
 <body>
 	<div id="postResultDiv" align="center"></div>
 	<div class="signup-form">
-		<form id="" method="post">
+		<form id="register">
 			<h2>Create Account</h2>
 			<div class="form-group">
 				<div class="input-group">
@@ -60,27 +65,29 @@
 				<div class="input-group">
 					<span class="input-group-addon"> <i class="fa fa-lock"></i>
 						<i class="fa fa-check"></i>
-
 					</span> <input type="password" class="form-control" id="confirm_password"
 						placeholder="Confirmar Contraseña" required="required">
 				</div>
 			</div>
 			<div class="form-group">
-				<button type="submit" class="btn btn-primary btn-block btn-lg">Registrarse</button>
+
+				<button type="submit" onclick="post.postUser()"
+					class="btn btn-primary btn-block btn-lg">Sign Up</button>
 
 			</div>
-			
+
 		</form>
 		<div class="text-center">
 			Ya tiene una cuenta? <a href="index.html">Ingrese aqui</a>.
 		</div>
 	</div>
-	<script src="/webjars/jquery/jquery.min.js"></script>
-	<script src="styles/bootstrap-4.1.2/bootstrap.min.js"></script>
-	<script src="js/jquery-3.3.1.min.js"></script>
+	<!-- 	<script src="/webjars/jquery/jquery.min.js"></script> -->
+	<script src="/webjars/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+	<!--  	<script src="js/jquery-3.3.1.min.js"></script>  -->
+
 	<script src="js/post.js"></script>
-	
-	
-	
+
+
+
 </body>
 </html>
