--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -9,15 +9,12 @@
 <title>SuperEasy Sign Up</title>
 <link rel="stylesheet" type="text/css"
 	href="styles/bootstrap-4.1.2/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="styles/showMessage.css">
 
 <link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet"
 	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="styles/register.css">
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script
-	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
 
 
 </head>
@@ -67,8 +64,9 @@
 			Ya tiene una cuenta? <a href="index.html">Ingrese aqui</a>.
 		</div>
 	</div>
-	<!-- 	<script src="/webjars/jquery/jquery.min.js"></script> -->
+	<script src="/webjars/jquery/jquery.min.js"></script>
 	<script src="/webjars/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/jquery.showmessage.min.js"></script>
 	<!--  	<script src="js/jquery-3.3.1.min.js"></script>  -->
 
 	<script src="js/post.js"></script>
