--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -256,7 +256,8 @@
 							<div class="schedule_title_bar schedule_title_bar_1 text-center">
 								Nuevas Subastas<span>Productos Nuevos</span>
 							</div>
-							<div class="schedule_list">
+							<div class="schedule_list" id = "NuevasSubastas">
+							<script src=”js/nuevasSubastas.js”></script>
 								<ul>
 									<li
 										class="d-flex flex-row align-items-center justify-content-start">
