--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -21,7 +21,7 @@
 <link rel="stylesheet" type="text/css" href="styles/main_styles.css">
 <link rel="stylesheet" type="text/css" href="styles/responsive.css">
 </head>
-<body>
+<body onload="appuser.getUser()">
 
 	<div class="super_container">
 
@@ -42,6 +42,7 @@
 					<ul
 						class="d-flex flex-row align-items-center justify-content-start">
 						<li class="active"><a href="index.html">Home</a></li>
+						<li style="display:none" class="active">hjhg</li>
 						<li class="has_children"><a>Mis Productos</a>
 							<ul>
 								<li><a>Nav Item</a></li>
@@ -82,14 +83,7 @@
 						</ul>
 					</div>
 					<div class="social">
-						<ul
-							class="d-flex flex-row align-items-center justify-content-start">
-							<li><a><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-							<li><a><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-							<li><a><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-							<li><a><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
-							<li><a><i class="fa fa-behance" aria-hidden="true"></i></a></li>
-						</ul>
+						
 					</div>
 					<div class="header_link">
 						<a> <span>Mi Cuenta<img src="images/arrow.png" alt=""></span>
@@ -257,7 +251,7 @@
 								Nuevas Subastas<span>Productos Nuevos</span>
 							</div>
 							<div class="schedule_list" id = "NuevasSubastas">
-							<script src=”js/nuevasSubastas.js”></script>
+							<!--   <script src=”js/nuevasSubastas.js”></script>-->
 								<ul>
 									<li
 										class="d-flex flex-row align-items-center justify-content-start">
@@ -502,5 +496,6 @@
 	<script src="plugins/progressbar/progressbar.min.js"></script>
 	<script src="plugins/parallax-js-master/parallax.min.js"></script>
 	<script src="js/custom.js"></script>
+	<script src="js/appuser.js"></script>
 </body>
 </html>
