--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -8,36 +8,147 @@
 <link rel="stylesheet" type="text/css"
 	href="styles/bootstrap-4.1.2/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="styles/login.css">
+<link rel="stylesheet" type="text/css"
+	href="styles/bootstrap-4.1.2/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="styles/showMessage.css">
+
+<link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" type="text/css" href="styles/register.css">
+
 
 
 </head>
 <body>
-	<div id="getResultDiv" style="padding: 20px 10px 20px 50px">
-		<ul class="list-group">
-		</ul>
-	</div>
-	<div class="login-form">
-		<form>
-			<h2 class="text-center">SuperEasy bids</h2>
-			<div class="form-group">
-				<input type="text" id="userInput" class="form-control"
-					placeholder="Usuario" required="required">
-			</div>
-			<div class="form-group">
-				<input type="password" id="passwordInput" class="form-control"
-					placeholder="Contraseña" required="required">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<a class="navbar-brand" href="#">Super Easy Bids</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse"
+			data-target="#navbarSupportedContent"
+			aria-controls="navbarSupportedContent" aria-expanded="false"
+			aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav mr-auto">
+
+
+
+
+
+			</ul>
+			<form class="form-inline my-2 my-lg-0">
+				<button type="button" class="btn btn-info btn-lg"
+					data-toggle="modal" data-target="#login">LOGIN</button>
+			</form>
+		</div>
+	</nav>
+	<div class="modal fade" id="login" role="dialog">
+		<div class="modal-dialog">
+
+			<!-- Modal content-->
+			<div class="modal-content">
+				<div class="modal-header">
+					<h2 class="text-center">SuperEasy bids</h2>
+					<button type="button" class="close" data-dismiss="modal">&times;</button>
+
+				</div>
+				<div class="modal-body">
+					<div class="login-form">
+
+
+						<div class="form-group">
+							<input type="text" id="userInput" class="form-control"
+								placeholder="Usuario" required="required">
+						</div>
+						<div class="form-group">
+							<input type="password" id="passwordInput" class="form-control"
+								placeholder="Contraseña" required="required">
+						</div>
+
+						<div class="form-group">
+							<button id="loggin" type="button"
+								class="btn btn-primary btn-block"
+								onclick="appuser.evaluateCredentials(userInput.value,passwordInput.value)">Ingresar</button>
+
+						</div>
+
+
+					</div>
+				</div>
+				<div class="modal-footer " align="center">
+
+					<a href="register.html">Crear Una cuenta</a>
+
+
+				</div>
 			</div>
 
-			<div class="form-group">
-				<button id="loggin" type="button" class="btn btn-primary btn-block"
-					onclick="appuser.evaluateCredentials(userInput.value,passwordInput.value)">Ingresar</button>
+		</div>
+	</div>
+	<div class="container">
+		<div class="row">
+			<div class="col-sm">
+				<div class="signup-form">
+					<img src="images/martillo.jpg" class="img-fluid"
+						alt="Responsive image">
+				</div>
+			</div>
+			<div class="col-md">
+				<div id="postResultDiv" align="center"></div>
+				<div class="signup-form">
+					<form id="register">
+						<h2>Create Account</h2>
+						<div class="form-group">
+							<div class="input-group">
+								<span class="input-group-addon"><i class="fa fa-user"></i></span>
+								<input type="text" class="form-control" id="username"
+									placeholder="Usuario" required="required">
+							</div>
+						</div>
+						<div class="form-group">
+							<div class="input-group">
+								<span class="input-group-addon"><i
+									class="fa fa-paper-plane"></i></span> <input type="email"
+									class="form-control" id="email" placeholder="Correo"
+									required="required">
+							</div>
+						</div>
+						<div class="form-group">
+							<div class="input-group">
+								<span class="input-group-addon"><i class="fa fa-phone"></i></span>
+								<input type="number" class="form-control" id="phone"
+									placeholder="Telefono" required="required">
+							</div>
+						</div>
+						<div class="form-group">
+							<div class="input-group">
+								<span class="input-group-addon"><i class="fa fa-lock"></i></span>
+								<input type="password" class="form-control" id="password"
+									placeholder="Contraseña" required="required">
+							</div>
+						</div>
+
+						<div class="form-group">
+
+							<button style="background: #17a2b8" type="submit"
+								onclick="post.postUser()"
+								class="btn btn-primary btn-block btn-lg">Sign Up</button>
+
+						</div>
+
+					</form>
+
+				</div>
+
 
 			</div>
-		</form>
-		<p class="text-center">
-			<a href="register.html">Crear Una cuenta</a>
-		</p>
+
+
+		</div>
 	</div>
+
 
 	<!-- Modal -->
 	<div class="modal fade" id="IncorrectLogin" tabindex="-1" role="dialog"
@@ -68,5 +179,10 @@
 		<script src="styles/bootstrap-4.1.2/bootstrap.min.js"></script>
 		<script src="js/apiUser.js"></script>
 		<script src="js/appuser.js"></script>
+
+		<script type="text/javascript" src="js/jquery.showmessage.min.js"></script>
+		<!--  	<script src="js/jquery-3.3.1.min.js"></script>  -->
+
+		<script src="js/post.js"></script>
 </body>
 </html>
