--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -132,7 +132,7 @@
 
 						<div class="form-group">
 
-							<button style="background: #17a2b8" type="submit"
+							<button style="background: #17a2b8" type="button"
 								onclick="post.postUser()"
 								class="btn btn-primary btn-block btn-lg">Sign Up</button>
 
