--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -46,6 +46,7 @@
 
 						<li id="loginul"><a href="login.html">Login</a></li>
 						<li id="registerul"><a href="login.html">Register</a></li>
+						<li id="NuevoProducto"><a href="newItem.html">Añadir Subasta</a></li>
 
 						<li class="has_children"><a>Mis Productos</a>
 							<ul>
@@ -86,6 +87,7 @@
 
 						</ul>
 						<a id="userName"> </a>
+						<button id="botonLogout" type="submit"  style= "display: none;" onclick="appuser.logOut()" class="btn btn-danger"> Salir </button>
 					</div>
 					<div class="hamburger">
 						<i class="fa fa-bars" aria-hidden="true"></i>
