--- a/src/main/resources/static/newItem.html
+++ b/src/main/resources/static/newItem.html
@@ -68,7 +68,7 @@
 
 						<button type="submit" id=""
 							class="btn btn-success loginFormElement"
-							onclick="postSubasta.postItem(); return false;">Add Product</button>
+							onclick="postSubasta.postItem();">Add Product</button>
 
 					</div>
 				</form>
@@ -79,8 +79,6 @@
 
 
 	<div id="push"></div>
-	<script
-  src="https://code.jquery.com/jquery-1.7.2.js"></script>
 	<script src="js/jquery-3.3.1.min.js"></script>
 	<script src="styles/bootstrap-4.1.2/popper.js"></script>
 	<script src="styles/bootstrap-4.1.2/bootstrap.min.js"></script>
