--- a/src/main/resources/static/newItem.html
+++ b/src/main/resources/static/newItem.html
@@ -68,7 +68,7 @@
 
 						<button type="submit" id=""
 							class="btn btn-success loginFormElement"
-							onclick="postSubasta.postItem();">Add Product</button>
+							onclick="postSubasta.postItem();return false;">Add Product</button>
 
 					</div>
 				</form>
