--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -46,7 +46,8 @@
 
 						<li id="loginul"><a href="login.html">Login</a></li>
 						<li id="registerul"><a href="login.html">Register</a></li>
-						<li id="NuevoProducto"><a href="newItem.html">Añadir Subasta</a></li>
+						<li id="NuevoProducto"><a href="newItem.html">Añadir
+								Subasta</a></li>
 
 						<li class="has_children"><a>Mis Productos</a>
 							<ul>
@@ -87,7 +88,9 @@
 
 						</ul>
 						<a id="userName"> </a>
-						<button id="botonLogout" type="submit"  style= "display: none;" onclick="appuser.logOut()" class="btn btn-danger"> Salir </button>
+						<button id="botonLogout" type="submit" style="display: none;"
+							onclick="appuser.logOut()" class="btn btn-danger">Salir
+						</button>
 					</div>
 					<div class="hamburger">
 						<i class="fa fa-bars" aria-hidden="true"></i>
@@ -139,6 +142,10 @@
 							<div class="row">
 								<div class="col">
 									<div class="home_content">
+										<div class="button button_1 home_button">
+											<a href="subastaspreview.html"><span>ofertar subasta<img
+													src="images/arrow_2.png" alt="" ></span></a>
+										</div>
 										<div class="home_title">
 											<h1>
 												<span>Oferta Destacada</span> <span>Huracan
