--- a/src/main/resources/static/subastaspreview.html
+++ b/src/main/resources/static/subastaspreview.html
@@ -16,7 +16,7 @@
 
 
 </head>
-<body onload="subasta.init('producto')">
+<body >
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
