--- a/src/main/resources/static/subastaspreview.html
+++ b/src/main/resources/static/subastaspreview.html
@@ -18,7 +18,7 @@
 
 
 </head>
-<body onLoad="subastaConItem.setTable()">
+<body onLoad="subastaConItem.llenar()">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
@@ -211,6 +211,7 @@
 	<script src="js/jquery-3.3.1.min.js"></script>
 	    <script src="https://nightly.datatables.net/js/jquery.dataTables.js"></script>
 	<script src="styles/bootstrap-4.1.2/bootstrap.min.js"></script>
+	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 	<script src="js/subastaConItem.js"></script>
 	<script src="js/subasta.js"></script>
 </body>
