--- a/src/main/resources/static/subasta.html
+++ b/src/main/resources/static/subasta.html
@@ -10,7 +10,7 @@
 <script src="js/subasta.js"></script>
 
 </head>
-<body onload="subasta.init('producto')">
+<body onload="subasta.init()">
 	<img src="images/armadura.jpg">
 	<p>Valor actual :</p>
 	<p id="actualValue">0</p>
