--- a/src/main/resources/static/newItem.html
+++ b/src/main/resources/static/newItem.html
@@ -66,9 +66,9 @@
 							class="form-control input-lg" placeholder="Large" type="text">
 						<div class="container"></div>
 
-						<button type="submit" id=""
+						<button type="button" id=""
 							class="btn btn-success loginFormElement"
-							onclick="postSubasta.postItem();return false;">Add Product</button>
+							onclick="postSubasta.postItem()">Add Product</button>
 						<p id="actualValue" hidden>0</p>
 
 					</div>
