--- a/src/main/resources/static/subastaspreview.html
+++ b/src/main/resources/static/subastaspreview.html
@@ -18,15 +18,14 @@
 
 
 </head>
-<body onLoad="subastaConItem.llenar()">
+<body onLoad="subastaConItem.llenar(); subasta.init();">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
 				<div class="product-title">
-					<h3>Ford Endeavour Top Class 2012</h3>
+					<h2>SuperEasy</h2>
 					<h5>
-						<i class="fa fa-map-marker"></i> Karali, Mahendru, New
-						Delhi-110085
+						<i class="fa fa-map-marker"></i> Escuela Colombiana de Ingeniería Julio Garavito
 					</h5>
 
 					<hr>
@@ -76,17 +75,19 @@
 				<div class="jumbotron jumbotron-fluid text-center">
 					<div class="container">
 						<h1 class="display-4">Valor Actual</h1>
-						<p id="actualValue">0</p>
+						<h3 id="actualValue"></h3>
 					</div>
 				</div>
 			</div>
 			<div class="col-md-4">
-
 				<p>
-				<div class="input-group">
-					<form class="form-inline" style="margin-top: 270px"
-						;
-						&lt;div class="form-group">
+				<div class="jumbotron jumbotron-fluid text-center">
+					<div class="container">
+						<h1 class="display-4">Fecha Inicio</h1>
+						<h4 id="fechaInicio"></h4>
+						<h1 class="display-4">Fecha Fin</h1>
+						<h4 id="fechaFin"></h4>
+					</div>
 				</div>
 				<div class="input-group-append">
 					<input id="Bid" name="" type="number" placeholder="Amount"
@@ -96,11 +97,8 @@
 						onclick="subasta.ofertar($('#Bid').val());return false;">BID
 						NOW</button>
 				</div>
-				</form>
 			</div>
 		</div>
-
-	</div>
 
 	</div>
 	<hr>
@@ -118,15 +116,7 @@
 						</div>
 						<div id="collapse1" class="panel-collapse collapse in">
 							<div class="panel-body">
-								<ul>
-									<li>No body parts have been repaired</li>
-									<li>Buyer needs to deposit money within 4 days</li>
-									<li>Buyer is advised to inspect the vehicle physically</li>
-									<li>Gaadiexpert is not responsible for any kinds of parts
-										damaged or missing.</li>
-									<li>Gaadiexpert with assist you in their limits.</li>
-
-								</ul>
+								<ul id="descripcion"></ul>
 							</div>
 						</div>
 					</div>
@@ -134,69 +124,22 @@
 						<div class="panel-heading">
 							<h4 class="panel-title">
 								<a data-toggle="collapse" data-parent="#accordion"
-									href="#collapse2"> My Bid Details</a>
+									href="#collapse2"> My Auction Details</a>
 							</h4>
 						</div>
-						<div id="" class="panel-collapse collapse">
+						<div id="collapse2" class="panel-collapse collapse">
 							<div class="panel-body">
 								<table class="table table-hover" id="example">
-									<thead>
-										<tr>
-											<th>seller</th>
-											<th>precioSugerido</th>
-											<th>precioActual</th>
-											<th>marca</th>
-											<th>modelo</th>
-										</tr>
-									</thead>
-<!-- 									<tbody> -->
-<!-- 										<tr> -->
-<!-- 											<td>25/01/2018</td> -->
-<!-- 											<td>260000</td> -->
-<!-- 											<td>Winning</td> -->
-<!-- 										</tr> -->
-<!-- 										<tr> -->
-<!-- 											<td>25/01/2018</td> -->
-<!-- 											<td>260000</td> -->
-<!-- 											<td>Winning</td> -->
-<!-- 										</tr> -->
-<!-- 										<tr> -->
-<!-- 											<td>25/01/2018</td> -->
-<!-- 											<td>260000</td> -->
-<!-- 											<td>Winning</td> -->
-<!-- 										</tr> -->
-<!-- 									</tbody> -->
 								</table>
 
 							</div>
 						</div>
 					</div>
-					<div class="panel panel-default">
-						<div class="panel-heading">
-							<h4 class="panel-title">
-								<a data-toggle="collapse" data-parent="#accordion"
-									href="#collapse3"> Must Know Info</a>
-							</h4>
-						</div>
-						<div id="collapse3" class="panel-collapse collapse">
-							<div class="panel-body">
-								<ul>
-									<li>No body parts have been repaired</li>
-									<li>Buyer needs to deposit money within 4 days</li>
-									<li>Buyer is advised to inspect the vehicle physically</li>
-									<li>Gaadiexpert is not responsible for any kinds of parts
-										damaged or missing.</li>
-									<li>Gaadiexpert with assist you in their limits.</li>
-
-								</ul>
-							</div>
-						</div>
-					</div>
 				</div>
 			</div>
-			<div class="col-md-4">
-				<h4>Customer Service : 011-45063800</h4>
-			</div>
+<!-- 			<div class="col-md-4"> -->
+<!-- 				<h4>Customer Service : 011-45063800</h4> -->
+<!-- 			</div> -->
 		</div>
 	</div>
 
