--- a/src/main/resources/static/subastaspreview.html
+++ b/src/main/resources/static/subastaspreview.html
@@ -84,9 +84,7 @@
 
 				<p>
 				<div class="input-group">
-					<form class="form-inline" style="margin-top: 270px"
-						;
-						&lt;div class="form-group">
+					<form class="form-inline" >
 				</div>
 				<div class="input-group-append">
 					<input id="Bid" name="" type="number" placeholder="Amount"
