--- a/src/main/resources/static/newItem.html
+++ b/src/main/resources/static/newItem.html
@@ -48,7 +48,7 @@
 					<div class="form-group">
 
 						<label class="control-label">Product Image</label> <input
-							class="filestyle" data-icon="false" type="file">
+							class="filestyle" data-icon="false" id="productimage" type="text">
 
 					</div>
 					<div class="form-group">
