--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -166,7 +166,7 @@
 				<div class="modal-body">Credenciales Incorrectas Por favor
 					Ingreselas Nuevamente.</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-secondary"
+					<button type="button" class="btn btn-secondary"login
 						data-dismiss="modal">Close</button>
 
 				</div>
