Cambios visuales boton visitar y phone String

--- a/src/main/resources/static/newItem.html
+++ b/src/main/resources/static/newItem.html
@@ -68,7 +68,7 @@
 
 						<button type="button" id=""
 							class="btn btn-success loginFormElement"
-							onclick="postSubasta.postItem()">Add Product</button>
+							onclick="postSubasta.postItem();">Add Product</button>
 						<p id="actualValue" hidden>0</p>
 
 					</div>
