--- a/src/main/resources/static/newItem.html
+++ b/src/main/resources/static/newItem.html
@@ -86,6 +86,7 @@
 	<script src="https://momentjs.com/downloads/moment.min.js"></script>
 	<script src="/webjars/sockjs-client/sockjs.min.js"></script>
 	<script src="/webjars/stomp-websocket/stomp.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
 	<script src="js/postSubasta.js"></script>
 	<script src="js/subasta.js"></script>
 	<script src="js/appuser.js"></script>
