--- a/src/main/resources/static/subastaspreview.html
+++ b/src/main/resources/static/subastaspreview.html
@@ -8,6 +8,7 @@
 	href="styles/bootstrap-4.1.2/bootstrap.min.css">
 <link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css"
 	rel="stylesheet" type="text/css">
+	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/animate.css@3.6.1/animate.min.css">
 
 
 <!------ Include the above in your HEAD tag ---------->
@@ -159,6 +160,7 @@
 	<script src="styles/bootstrap-4.1.2/bootstrap.min.js"></script>
 	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/easytimer@1.1.1/src/easytimer.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
 	<script src="js/subastaConItem.js"></script>
 	<script src="js/subasta.js"></script>
 	<script src="js/apiUser.js"></script>
