--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -71,12 +71,12 @@
 					class="header_right ml-auto d-flex flex-row align-items-center justify-content-start">
 					<div class="log_reg">
 					<ul id="jairitosfavor">
-						<li ><a>Jairitos</a> <p id="numjairitos"> a</p></li>
+						<li ><a>Jairitos</a> <p id="numjairitos"> 0</p></li>
 					</ul>
 					</div>
 					<div class="log_reg">
 						<ul id="jairitoscongelados">
-						<li ><a>congelados</a><p id="numcongelados"> a</p></li>
+						<li ><a>Congelados</a><p id="numcongelados"> 0</p></li>
 					</ul>
 					</div>
 					
